Bug 408447 - Krita can't launch and do floating point exception
Summary: Krita can't launch and do floating point exception
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.2.0
Platform: Mint (Debian based) Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-08 08:42 UTC by leo.roubinowitz
Modified: 2019-06-13 06:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The kpl files that broke krita 4.2 at launch (410 bytes, application/x-krita)
2019-06-08 08:42 UTC, leo.roubinowitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description leo.roubinowitz 2019-06-08 08:42:55 UTC
Created attachment 120688 [details]
The kpl files that broke krita 4.2 at launch

SUMMARY

Update a Krita 4.1.8 to 4.2 with some .kpl into the palette directory in .local/share/krita cause to krita to break and can't launch anymore.

To make working again, have to delete/move the .kpl files into the krita local share directory.

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Halla Rempt 2019-06-08 08:46:24 UTC
Thanks for the report! 
Application: krita (krita), signal: Floating point exception
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f5f50798000 (LWP 20102))]

Thread 4 (Thread 0x7f5f35bf3700 (LWP 20112)):
#0  0x00007f5f44d229f3 in futex_wait_cancelable (private=<optimized out>, expected=0, futex_word=0x5570a5f04de8) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x5570a5f04d98, cond=0x5570a5f04dc0) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x5570a5f04dc0, mutex=0x5570a5f04d98) at pthread_cond_wait.c:655
#3  0x00007f5f236e4dcb in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#4  0x00007f5f236e4af7 in ?? () from /usr/lib/x86_64-linux-gnu/dri/i965_dri.so
#5  0x00007f5f44d1c6db in start_thread (arg=0x7f5f35bf3700) at pthread_create.c:463
#6  0x00007f5f4b26588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f5f22b96700 (LWP 20111)):
#0  0x00007f5f4b258bf9 in __GI___poll (fds=0x7f5f22b95c78, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5f421be747 in ?? () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#2  0x00007f5f421c036a in xcb_wait_for_event () from /usr/lib/x86_64-linux-gnu/libxcb.so.1
#3  0x00007f5f36f3c32a in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#4  0x00007f5f4bb7dbc2 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5f44d1c6db in start_thread (arg=0x7f5f22b96700) at pthread_create.c:463
#6  0x00007f5f4b26588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f5f2aa5f700 (LWP 20104)):
#0  0x00007f5f4b258bf9 in __GI___poll (fds=0x7f5f24004db0, nfds=1, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f5f4341f5c9 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007f5f4341f6dc in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007f5f4bdb315b in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#4  0x00007f5f4bd5464a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#5  0x00007f5f4bb7c41a in QThread::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#6  0x00007f5f44f4a015 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007f5f4bb7dbc2 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007f5f44d1c6db in start_thread (arg=0x7f5f2aa5f700) at pthread_create.c:463
#9  0x00007f5f4b26588f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f5f50798000 (LWP 20102)):
[KCrash Handler]
#6  0x00007f5f48b2de6e in KoColorSet::Private::loadKplGroup (this=this@entry=0x5570a83e39e0, doc=..., parentEle=..., group=0x5570a71b6a98) at /home/boud/dev/krita/libs/pigment/resources/KoColorSet.cpp:1627
#7  0x00007f5f48b332a4 in KoColorSet::Private::loadKpl (this=this@entry=0x5570a83e39e0) at /home/boud/dev/krita/libs/pigment/resources/KoColorSet.cpp:972
#8  0x00007f5f48b3a588 in KoColorSet::Private::init (this=0x5570a83e39e0) at /home/boud/dev/krita/libs/pigment/resources/KoColorSet.cpp:711
#9  0x00007f5f48b3a7c6 in KoColorSet::loadFromDevice (this=0x5570a7993560, dev=0x7ffc2f1bf830) at /home/boud/dev/krita/libs/pigment/resources/KoColorSet.cpp:159
#10 0x00007f5f48b3281f in KoColorSet::load (this=0x5570a7993560) at /home/boud/dev/krita/libs/pigment/resources/KoColorSet.cpp:143
#11 0x00007f5f497c8afc in KoResourceServer<KoColorSet, PointerStoragePolicy<KoColorSet> >::loadResources (this=this@entry=0x5570a83dce70, filenames=...) at /home/boud/dev/krita/libs/widgets/KoResourceServer.h:203
#12 0x00007f5f497c20ce in KoResourceServerProvider::KoResourceServerProvider (this=0x7f5f49a997e0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /home/boud/dev/krita/libs/widgets/KoResourceServerProvider.cpp:136
#13 0x00007f5f497c288c in (anonymous namespace)::Q_QGS_s_instance::Holder::Holder (this=0x7f5f49a997e0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder>) at /home/boud/dev/krita/libs/widgets/KoResourceServerProvider.cpp:156
#14 (anonymous namespace)::Q_QGS_s_instance::innerFunction () at /home/boud/dev/krita/libs/widgets/KoResourceServerProvider.cpp:156
#15 QGlobalStatic<KoResourceServerProvider, (anonymous namespace)::Q_QGS_s_instance::innerFunction, (anonymous namespace)::Q_QGS_s_instance::guard>::operator QGlobalStatic<KoResourceServerProvider, (anonymous namespace)::Q_QGS_s_instance::innerFunction, (anonymous namespace)::Q_QGS_s_instance::guard>::Type* (this=<optimized out>) at /usr/include/x86_64-linux-gnu/qt5/QtCore/qglobalstatic.h:134
#16 KoResourceServerProvider::instance () at /home/boud/dev/krita/libs/widgets/KoResourceServerProvider.cpp:160
#17 0x00007f5f4f460efc in KisApplication::loadResources (this=this@entry=0x7ffc2f1bff60) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:287
#18 0x00007f5f4f465340 in KisApplication::start (this=0x7ffc2f1bff60, args=...) at /home/boud/dev/krita/libs/ui/KisApplication.cpp:425
#19 0x00005570a2f06e0b in main (argc=<optimized out>, argv=0x7ffc2f1c00c8) at /home/boud/dev/krita/krita/main.cc:524
Comment 2 Halla Rempt 2019-06-08 08:54:46 UTC
Git commit 5efcaf69c85ffb9c16343e51fc1a37a418d6f8fa by Boudewijn Rempt.
Committed on 08/06/2019 at 08:54.
Pushed by rempt into branch 'master'.

Don't divide 0 by 0 when trying to load a broken kpl file
BACKPORT:krita/4.2

M  +2    -2    libs/pigment/resources/KoColorSet.cpp

https://invent.kde.org/kde/krita/commit/5efcaf69c85ffb9c16343e51fc1a37a418d6f8fa
Comment 3 Halla Rempt 2019-06-08 09:01:43 UTC
The fix will be in the next nightly appimage build: https://binary-factory.kde.org/job/Krita_Nightly_Appimage_Build/ (build 510 when it's done).
Comment 4 Halla Rempt 2019-06-13 06:33:14 UTC
Git commit 86caaa72fda982b8a3a02da1c24a3d6cd7f34517 by Boudewijn Rempt.
Committed on 13/06/2019 at 05:59.
Pushed by rempt into branch 'krita/4.2'.

Don't divide 0 by 0 when trying to load a broken kpl file
BACKPORT:krita/4.2
(cherry picked from commit 5efcaf69c85ffb9c16343e51fc1a37a418d6f8fa)

M  +2    -2    libs/pigment/resources/KoColorSet.cpp

https://invent.kde.org/kde/krita/commit/86caaa72fda982b8a3a02da1c24a3d6cd7f34517