Don't divide 0 by 0 when trying to load a broken kpl file

BUG:408447
BACKPORT:krita/4.2
(cherry picked from commit 5efcaf69c85ffb9c16343e51fc1a37a418d6f8fa)