libs/pigment/resources/KoColorSet.cpp
@@ -1624,8 +1624,8 @@ void KoColorSet::Private::loadKplGroup(const QDomDocument &doc, const QDomElemen
         }
     }
 
-    if (parentEle.attribute(KPL_GROUP_ROW_COUNT_ATTR).isNull() && group->colorCount()/group->columnCount()+1 < 20) {
-        group->setRowCount(group->colorCount()/group->columnCount()+1);
+    if (parentEle.attribute(KPL_GROUP_ROW_COUNT_ATTR).isNull() && group->colorCount() > 0 && (group->colorCount() / (group->columnCount() +1)) < 20) {
+        group->setRowCount(group->colorCount() / group->columnCount() + 1);
     }
 
 }
